name:                scrivener
version:             0.1.1.0
-- synopsis:
-- description:
homepage:            https://github.com/doublecrowngaming/scrivener
license:             BSD3
license-file:        LICENSE
author:              Jesse Kempf
maintainer:          jesse.kempf@doublecrown.co
copyright:           2019 Double Crown Gaming Co.
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Data.Conduit.Buffered
                     , Data.Conduit.Accumulate
                     , Data.Conduit.LogDNA
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , bytestring
                     , conduit
                     , conduit-extra
                     , hostname
                     , http-api-data
                     , lifted-base
                     , mtl
                     , req
                     , stm
                     , stm-conduit
                     , text
                     , time

executable scrivener
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , conduit
                     , conduit-extra
                     , optparse-applicative
                     , scrivener
                     , stm
                     , stm-chans

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.Conduit.BufferedSpec
                     , Data.Conduit.AccumulateSpec
  build-depends:       base
                     , scrivener
                     , conduit
                     , hspec
                     , QuickCheck
                     , stm
                     , stm-chans
                     , stm-conduit

source-repository head
  type:     git
  location: https://github.com/doublecrowngaming/scrivener
